--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,16 @@
-spring.datasource.url= jdbc:mysql://localhost:3306/onetomany?allowPublicKeyRetrieval=true&useSSL=false
-spring.datasource.username= root
-spring.datasource.password= 1234
+# mysql
+#spring.datasource.url= jdbc:mysql://localhost:3306/onetomany?allowPublicKeyRetrieval=true&useSSL=false
+#spring.datasource.username= root
+#spring.datasource.password= 1234
+#spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQL5InnoDBDialect
+#spring.jpa.hibernate.ddl-auto= update
 
-spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQL5InnoDBDialect
-spring.jpa.hibernate.ddl-auto= update
+# sql-server
+spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=testdb
+spring.datasource.username=sa
+spring.datasource.password=yourStrong(!)Password
+spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
+# JPA properties
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServerDialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
